Fix mobile horizontal scroll issue

--- a/css/01-style.css
+++ b/css/01-style.css
@@ -2,6 +2,7 @@ html,
 body {
   font-family: 'Poppins', sans-serif;
   background-color: #f9f9f9;
+  overflow-x: hidden;
 }
 
 /* |> Headings */
